falta mandar msg pra quem quiser, overflow certo no texto e mais uns bugs

--- a/csss/styles.css
+++ b/csss/styles.css
@@ -105,7 +105,7 @@ img {
     width: 100vw;
     height: 100vh;
 
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     z-index: 1;
@@ -155,6 +155,8 @@ img {
     display: flex;
     align-items: center;
     color: #000000;
+
+    overflow:hidden;
 }
 .withoutCheck {
     width: 190px;
@@ -169,13 +171,21 @@ img {
 .check {
     color: green;
 }
+.PeopleOn{
+    overflow-y: scroll;
+}
 
 
 main{
+    width: 100%;
+    height: 100%;
     margin: 105px 0;
+
+    overflow-y: scroll;
 }
 .message {
-    height: 40px;
+    /* height: 40px; */
+    width: 100%;
     padding: 0 8px;
     border-radius: 2px;
     margin-bottom: 5px;
@@ -187,6 +197,8 @@ main{
     font-weight: normal;
     font-size: 14px;
     line-height: 16px;
+
+    overflow:hidden;
 }
 .normalMessage {
     background: white;
